// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner scan combinations of simple symbols 1`] = `
Array [
  Object {
    "end": 1,
    "leadingTrivia": Array [],
    "lexeme": "{",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 1,
      },
      "start": Object {
        "column": -1,
        "line": 1,
      },
    },
    "start": 0,
    "trailingTrivia": Array [],
    "type": "LEFT_BRACE",
  },
  Object {
    "end": 2,
    "leadingTrivia": Array [],
    "lexeme": "}",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "RIGHT_BRACE",
  },
  Object {
    "end": 2,
    "leadingTrivia": Array [],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;

exports[`Scanner scan combinations of simple symbols 2`] = `
Array [
  Object {
    "end": 1,
    "leadingTrivia": Array [],
    "lexeme": "[",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 1,
      },
      "start": Object {
        "column": -1,
        "line": 1,
      },
    },
    "start": 0,
    "trailingTrivia": Array [],
    "type": "LEFT_BRACKET",
  },
  Object {
    "end": 2,
    "leadingTrivia": Array [],
    "lexeme": "]",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "RIGHT_BRACKET",
  },
  Object {
    "end": 2,
    "leadingTrivia": Array [],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;

exports[`Scanner scan comments 1`] = `
Array [
  Object {
    "end": 24,
    "leadingTrivia": Array [
      Object {
        "end": 11,
        "leadingTrivia": Array [],
        "lexeme": "//comment1",
        "literal": "comment1",
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 3,
          },
          "start": Object {
            "column": 0,
            "line": 2,
          },
        },
        "start": 1,
        "trailingTrivia": Array [],
        "type": "COMMENT",
      },
      Object {
        "end": 23,
        "leadingTrivia": Array [],
        "lexeme": "// comment2",
        "literal": " comment2",
        "loc": Object {
          "end": Object {
            "column": NaN,
            "line": 22,
          },
          "start": Object {
            "column": 1,
            "line": 3,
          },
        },
        "start": 12,
        "trailingTrivia": Array [],
        "type": "COMMENT",
      },
    ],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 4,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 23,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;

exports[`Scanner scan comments 2`] = `
Array [
  Object {
    "end": 41,
    "leadingTrivia": Array [
      Object {
        "end": 32,
        "leadingTrivia": Array [],
        "lexeme": "/**
 * comment1
 * comment2
 */",
        "literal": "*
 * comment1
 * comment2
 ",
        "loc": Object {
          "end": Object {
            "column": NaN,
            "line": 29,
          },
          "start": Object {
            "column": 0,
            "line": 2,
          },
        },
        "start": 1,
        "trailingTrivia": Array [],
        "type": "COMMENT",
      },
    ],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 3,
      },
      "start": Object {
        "column": 12,
        "line": 3,
      },
    },
    "start": 40,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;

exports[`Scanner scan identifiers 1`] = `
Array [
  Object {
    "end": 4,
    "leadingTrivia": Array [],
    "lexeme": "foo",
    "literal": "foo",
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 8,
    "leadingTrivia": Array [],
    "lexeme": "bar",
    "literal": "bar",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "start": 5,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 13,
    "leadingTrivia": Array [],
    "lexeme": "_foo",
    "literal": "_foo",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 5,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 9,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 21,
    "leadingTrivia": Array [],
    "lexeme": "package",
    "literal": "package",
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 5,
      },
      "start": Object {
        "column": 3,
        "line": 5,
      },
    },
    "start": 14,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 25,
    "leadingTrivia": Array [],
    "lexeme": "foo",
    "literal": "foo",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 6,
      },
      "start": Object {
        "column": NaN,
        "line": 29,
      },
    },
    "start": 22,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 26,
    "leadingTrivia": Array [],
    "lexeme": ";",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 6,
      },
      "start": Object {
        "column": 2,
        "line": 6,
      },
    },
    "start": 25,
    "trailingTrivia": Array [],
    "type": "SEMICOLON",
  },
  Object {
    "end": 33,
    "leadingTrivia": Array [],
    "lexeme": "import",
    "literal": "import",
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 29,
      },
      "start": Object {
        "column": 4,
        "line": 6,
      },
    },
    "start": 27,
    "trailingTrivia": Array [],
    "type": "IDENTIFIER",
  },
  Object {
    "end": 42,
    "leadingTrivia": Array [],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "start": 41,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;

exports[`Scanner scan numbers 1`] = `
Array [
  Object {
    "end": 3,
    "leadingTrivia": Array [],
    "lexeme": "23",
    "literal": 23,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "trailingTrivia": Array [],
    "type": "NUMBER",
  },
  Object {
    "end": 10,
    "leadingTrivia": Array [],
    "lexeme": "234.35",
    "literal": 234.35,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "start": 4,
    "trailingTrivia": Array [],
    "type": "NUMBER",
  },
  Object {
    "end": 15,
    "leadingTrivia": Array [],
    "lexeme": "0x43",
    "literal": 67,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 5,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 11,
    "trailingTrivia": Array [],
    "type": "NUMBER",
  },
  Object {
    "end": 20,
    "leadingTrivia": Array [],
    "lexeme": "0345",
    "literal": 229,
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 20,
      },
      "start": Object {
        "column": NaN,
        "line": 20,
      },
    },
    "start": 16,
    "trailingTrivia": Array [],
    "type": "NUMBER",
  },
  Object {
    "end": 24,
    "leadingTrivia": Array [],
    "lexeme": "1e3",
    "literal": 1000,
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 20,
      },
      "start": Object {
        "column": NaN,
        "line": 20,
      },
    },
    "start": 21,
    "trailingTrivia": Array [],
    "type": "NUMBER",
  },
  Object {
    "end": 33,
    "leadingTrivia": Array [],
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "start": 32,
    "trailingTrivia": Array [],
    "type": "EOF",
  },
]
`;
